redmine-14757: Merge old codebase theme into new codebase.

--- a/src/sass/application.scss
+++ b/src/sass/application.scss
@@ -1,3 +1,4 @@
+@import "morpht_variables";
 @import "variables";
 @import "mixins";
 
@@ -50,3 +51,5 @@
 //
 
 @import "javascripts/sidebar-toggler";
+
+@import "morpht";
