--- a/src/sass/_morpht_variables.scss
+++ b/src/sass/_morpht_variables.scss
@@ -46,7 +46,7 @@ $priority-default-icons-map: (
   low3: (
     icon:                       "priority-low.svg",
     color:                      $teal,
-    color-bg:                   shade($gray, 200)
+    color-bg:                   darken(shade($gray, 200), 20%)
   ),
   default: (
     icon:                       "priority-medium.svg",
@@ -55,16 +55,16 @@ $priority-default-icons-map: (
   high3: (
     icon:                       "priority-highest.svg",
     color:                      mix($blue, $yellow),
-    color-bg:                   shade($yellow, 50)
+    color-bg:                   darken(shade($yellow, 50), 20%)
   ),
   high2: (
     icon:                       "priority-major.svg",
     color:                      mix($blue, $orange),
-    color-bg:                   shade($orange, 100)
+    color-bg:                   darken(shade($orange, 100), 20%)
   ),
   highest: (
     icon:                       "priority-critical.svg",
     color:                      shade($blue, 600),
-    color-bg:                   shade($red, 100)
+    color-bg:                   darken(shade($red, 100), 20%)
   )
 );
