--- a/src/sass/_morpht.scss
+++ b/src/sass/_morpht.scss
@@ -154,3 +154,69 @@ tr.priority-highest {
     }
   }
 }
+
+////
+// SATISFACTION
+////
+
+.vote,
+.myvote {
+  position: relative;
+  > .label {
+    visibility: hidden;
+    &::after {
+      visibility: visible;
+      position: absolute;
+      left: 0;
+    }
+  }
+  > .value {
+    .vote_on_issues-issue-votes-nowrap {
+      padding-right: 10px;
+      > .vote_on_issues-icon-votes {
+        display: none;
+      }
+    }
+  }
+}
+
+// Labels.
+.vote > .label::after {
+  content: "Satisfaction:";
+}
+.myvote > .label::after {
+  content: "My satisfaction:";
+}
+
+// Vote results.
+#vote_on_issues_nVotesUp::after,
+#vote_on_issues_nVotesDn::after {
+  display: inline-block;
+  padding-left: 5px;
+  &:hover {
+    cursor: pointer;
+  }
+}
+#vote_on_issues_nVotesUp::after {
+  content: "👍";
+}
+#vote_on_issues_nVotesDn::after {
+  content: "👎";
+}
+
+// My vote buttons.
+.myvote {
+  #vote_on_issues_MyVoteUpOff,
+  #vote_on_issues_MyVoteDnOff {
+    display: none !important;
+  }
+  .vote_on_issues-icon-vote {
+    padding-left: 5px;
+  }
+  .vote_on_issues-icon-vote[href$="vote_val=vup"]::after {
+    content: "👍";
+  }
+  .vote_on_issues-icon-vote[href$="vote_val=vdn"]::after {
+    content: "👎";
+  }
+}
