Rename satisfaction label.

--- a/src/sass/_morpht.scss
+++ b/src/sass/_morpht.scss
@@ -177,7 +177,7 @@ tr.priority-highest {
       visibility: visible;
       position: absolute;
       left: 0;
-      content: "Satisfaction:";
+      content: "Are you satisfied?";
     }
   }
 }
